--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,28 +2,25 @@
     <string name="app_name">AbsensiApp</string>
 
     <string-array name="month">
-        <item>January</item>
-        <item>February</item>
-        <item>March</item>
+        <item>Januari</item>
+        <item>Februari</item>
+        <item>Maret</item>
         <item>April</item>
-        <item>May</item>
-        <item>June</item>
-        <item>July</item>
-        <item>August</item>
+        <item>Mei</item>
+        <item>Juni</item>
+        <item>Juli</item>
+        <item>Agustus</item>
         <item>September</item>
-        <item>October</item>
+        <item>Oktober</item>
         <item>November</item>
-        <item>December</item>
+        <item>Desember</item>
     </string-array>
 
     <string-array name="override">
-        <item>In</item>
-        <item>Out</item>
+        <item>Masuk</item>
+        <item>Keluar</item>
     </string-array>
 
     <string name="shr_hint_userid">UserId</string>
     <string name="shr_hint_password">Password</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
